--- a/FE_Onboarding/src/Modules/Admin/pages/Countries.module.css
+++ b/FE_Onboarding/src/Modules/Admin/pages/Countries.module.css
@@ -1,7 +1,6 @@
 /* src/Admin/pages/Countries.module.css */
 
 .container {
-  /* No se necesita padding-top en el contenedor principal si los elementos son fijos */
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -12,20 +11,23 @@
 
 .mainContent {
   position: absolute;
-  top: 60px; /* Start below the Navbar */
-  bottom: 0; /* Fill the rest of the height */
+  top: 60px;
+  bottom: 0;
   right: 0;
   padding: 20px;
   overflow-y: auto;
   transition: left 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Cuando el sidebar está abierto, el contenido principal se desplaza a la derecha */
 .mainContentOpen {
-  left: 220px; /* Ancho del sidebar abierto */
+  left: 180px; /* Ancho del sidebar cuando está abierto */
 }
 
-/* Cuando el sidebar está cerrado, el contenido principal se desplaza a la izquierda */
 .mainContentClosed {
-  left: 70px; /* Ancho del sidebar cerrado */
+  left: 80px; /* Ancho del sidebar cuando está cerrado */
+}
+
+.contentWrapper {
+  max-width: 95%;
+  margin: 0 auto; /* Centra el contenido dentro del mainContent */
 }
