--- a/FE_Onboarding/src/Modules/Admin/components/Sidebar.module.css
+++ b/FE_Onboarding/src/Modules/Admin/components/Sidebar.module.css
@@ -1,5 +1,7 @@
 /* src/Modules/Admin/components/Sidebar/Sidebar.module.css */
+
 .sidebar {
+  /* Mantener el resto de los estilos del sidebar */
   position: fixed;
   top: 60px;
   left: 0;
@@ -17,7 +19,6 @@
   border-top-right-radius: 18px;
   border-bottom-right-radius: 18px;
   overflow: hidden;
-  transition: width 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .sidebarClosed {
@@ -25,28 +26,31 @@
 }
 
 .toggleButton {
-  background: transparent;
+  background: var(--bdo-charcoal);
   border: none;
   color: #fff;
   font-size: 24px;
   cursor: pointer;
   padding: 12px;
   width: 100%;
-  text-align: center;
+  text-align: left; /* Alinea el botón a la izquierda */
   margin-bottom: 24px;
   border-radius: 0;
   transition: background 0.3s, box-shadow 0.3s;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start; /* Alinea el ícono del botón a la izquierda */
 }
 
+/* Cuando el sidebar está cerrado */
 .sidebarClosed .toggleButton {
-  justify-content: center;
+  justify-content: center; /* Centra el ícono cuando el sidebar está cerrado */
+  border: none;
 }
 
 .toggleButton:hover {
-  background-color: rgba(255, 255, 255, 0.15);
+  background: var(--bdo-charcoal);
+
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
 }
 
@@ -56,21 +60,22 @@
   gap: 10px;
   width: 100%;
   padding: 0 8px;
+  margin: 0 0 0 0;
+  border: 0;
 }
 
 .menuItem {
   display: flex;
-  align-items: center;
-  gap: 14px;
-  padding: 12px 10px;
-  border-radius: 10px;
+  align-items: center; /* Cambia de 'center' a 'baseline' para una mejor alineación del texto */
+  gap: 12px; /* Ajusta este valor si es necesario */
+  padding: 10px 10px;
   cursor: pointer;
   transition: all 0.3s ease;
   font-size: 16px;
   white-space: nowrap;
   background: transparent;
   transform: translateX(0);
-  color: #fff;
+  color: #ffffff;
   text-decoration: none;
   position: relative;
   overflow: hidden;
@@ -86,13 +91,14 @@
   background: rgba(255, 255, 255, 0.2);
   transform: translateX(4px);
   box-shadow: 0 2px 12px rgba(232, 28, 59, 0.12);
-  color: #fff;
+  color: #ffffff;
 }
 
 .icon {
   font-size: 22px;
   filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1));
   min-width: 22px;
+  padding-top: 10px;
   text-align: center;
   transition: color 0.3s;
 }
@@ -113,9 +119,7 @@
 .activeBar {
   position: absolute;
   left: 0;
-  top: 0;
-  height: 100%;
-  width: 5px;
+  width: 12px;
+  border: no;
   background-color: #fff;
-  border-radius: 10px;
 }
