--- a/FE_Onboarding/src/Modules/Onboarding/components/DynamicForm.module.css
+++ b/FE_Onboarding/src/Modules/Onboarding/components/DynamicForm.module.css
@@ -5,7 +5,8 @@
   display: flex;
   flex-direction: column;
   gap: 25px;
-  background-color: #fff;
+  background-color: red;
+  width: 100%;
   padding: 25px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
